linux: bump package to 555a312b 5.4.210

--- a/projects/Amlogic-ce/devices/Amlogic-ne/linux/linux.aarch64.conf
+++ b/projects/Amlogic-ce/devices/Amlogic-ne/linux/linux.aarch64.conf
@@ -1,14 +1,15 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 5.4.180 Kernel Configuration
+# Linux/arm64 5.4.210 Kernel Configuration
 #
-CONFIG_CC_VERSION_TEXT="aarch64-libreelec-linux-gnu-gcc-12.2.0 (GCC) 12.2.0"
+CONFIG_CC_VERSION_TEXT="aarch64-libreelec-linux-gnu-gcc-13.1.0 (GCC) 13.1.0"
 CONFIG_CC_IS_GCC=y
-CONFIG_GCC_VERSION=120200
+CONFIG_GCC_VERSION=130100
 CONFIG_CLANG_VERSION=0
 CONFIG_LLD_VERSION=0
 CONFIG_CC_CAN_LINK=y
 CONFIG_CC_HAS_ASM_GOTO=y
+CONFIG_CC_HAS_ASM_GOTO_OUTPUT=y
 CONFIG_CC_HAS_ASM_INLINE=y
 CONFIG_IRQ_WORK=y
 CONFIG_BUILDTIME_EXTABLE_SORT=y
@@ -645,7 +646,6 @@ CONFIG_ARCH_HAS_STRICT_KERNEL_RWX=y
 CONFIG_STRICT_KERNEL_RWX=y
 CONFIG_ARCH_HAS_STRICT_MODULE_RWX=y
 CONFIG_STRICT_MODULE_RWX=y
-CONFIG_REFCOUNT_FULL=y
 CONFIG_HAVE_ARCH_PREL32_RELOCATIONS=y
 CONFIG_LOCK_EVENT_COUNTS=y
 CONFIG_ARCH_HAS_RELR=y
@@ -2277,7 +2277,6 @@ CONFIG_WLAN=y
 # CONFIG_NETDEVSIM is not set
 # CONFIG_NET_FAILOVER is not set
 # CONFIG_ISDN is not set
-# CONFIG_NVM is not set
 
 #
 # Input device support
@@ -2534,9 +2533,8 @@ CONFIG_HW_RANDOM_MESON=y
 # CONFIG_TCG_TPM is not set
 # CONFIG_DEVPORT is not set
 # CONFIG_XILLYBUS is not set
-# end of Character devices
-
 # CONFIG_RANDOM_TRUST_BOOTLOADER is not set
+# end of Character devices
 
 #
 # I2C support
@@ -5635,6 +5633,8 @@ CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
 # CONFIG_ANDROID_BINDER_IPC_SELFTEST is not set
 CONFIG_ANDROID_VENDOR_HOOKS=y
+# CONFIG_ANDROID_KABI_RESERVE is not set
+CONFIG_ANDROID_VENDOR_OEM_DATA=y
 # end of Android
 
 # CONFIG_LIBNVDIMM is not set
@@ -6168,6 +6168,7 @@ CONFIG_DRM_MESON_USE_ION=y
 CONFIG_DRM_MESON_EMULATE_FBDEV=y
 CONFIG_DRM_MESON_FBDEV_UI_W=1920
 CONFIG_DRM_MESON_FBDEV_UI_H=1080
+# CONFIG_AMLOGIC_DRM_NONROOT is not set
 # CONFIG_AMLOGIC_IRBLASTER is not set
 # CONFIG_AMLOGIC_CPUIDLE is not set
 CONFIG_AMLOGIC_DEFENDKEY=y
@@ -6197,7 +6198,7 @@ CONFIG_AMLOGIC_POWER=y
 # CONFIG_AMLOGIC_POWER_SUPPLY is not set
 CONFIG_AMLOGIC_DEBUG=y
 CONFIG_AMLOGIC_DEBUG_LOCKUP=y
-# CONFIG_AMLOGIC_DEBUG_ATRACE is not set
+CONFIG_AMLOGIC_DEBUG_ATRACE=y
 CONFIG_AMLOGIC_DEBUG_FTRACE_PSTORE=y
 # CONFIG_AMLOGIC_DEBUG_SCRAMBLER_RAMOOPS is not set
 CONFIG_AMLOGIC_MEMORY_EXTEND=y
@@ -6211,6 +6212,7 @@ CONFIG_AMLOGIC_STACKPROTECTOR=y
 # CONFIG_AMLOGIC_WATCHPOINT is not set
 # CONFIG_AMLOGIC_MEM_DEBUG is not set
 # CONFIG_AMLOGIC_PIN_LOCKED_FILE is not set
+# CONFIG_AMLOGIC_PCIE_DMA_OPS is not set
 CONFIG_AMLOGIC_BT_DEVICE=y
 CONFIG_AMLOGIC_BT_WAKE_NOT_REPORT=y
 CONFIG_AMLOGIC_WIFI=y
@@ -6632,6 +6634,7 @@ CONFIG_LSM="lockdown,yama,loadpin,safesetid,integrity,selinux,smack,tomoyo,appar
 # Memory initialization
 #
 CONFIG_CC_HAS_AUTO_VAR_INIT_PATTERN=y
+CONFIG_CC_HAS_AUTO_VAR_INIT_ZERO_BARE=y
 CONFIG_CC_HAS_AUTO_VAR_INIT_ZERO=y
 CONFIG_INIT_STACK_NONE=y
 # CONFIG_INIT_STACK_ALL_PATTERN is not set
@@ -6642,7 +6645,7 @@ CONFIG_INIT_ON_ALLOC_DEFAULT_ON=y
 # end of Kernel hardening options
 # end of Security options
 
-CONFIG_XOR_BLOCKS=m
+CONFIG_XOR_BLOCKS=y
 CONFIG_CRYPTO=y
 
 #
@@ -6797,25 +6800,6 @@ CONFIG_CRYPTO_USER_API_RNG=y
 CONFIG_CRYPTO_USER_API_AEAD=y
 # CONFIG_CRYPTO_STATS is not set
 CONFIG_CRYPTO_HASH_INFO=y
-
-#
-# Crypto library routines
-#
-CONFIG_CRYPTO_LIB_AES=y
-CONFIG_CRYPTO_LIB_ARC4=y
-CONFIG_CRYPTO_LIB_BLAKE2S_GENERIC=y
-CONFIG_CRYPTO_LIB_BLAKE2S=y
-CONFIG_CRYPTO_ARCH_HAVE_LIB_CHACHA=y
-CONFIG_CRYPTO_LIB_CHACHA_GENERIC=y
-CONFIG_CRYPTO_LIB_CHACHA=y
-CONFIG_CRYPTO_LIB_CURVE25519_GENERIC=y
-CONFIG_CRYPTO_LIB_CURVE25519=y
-CONFIG_CRYPTO_LIB_DES=y
-CONFIG_CRYPTO_LIB_POLY1305_RSIZE=9
-CONFIG_CRYPTO_ARCH_HAVE_LIB_POLY1305=y
-CONFIG_CRYPTO_LIB_POLY1305=y
-CONFIG_CRYPTO_LIB_CHACHA20POLY1305=y
-CONFIG_CRYPTO_LIB_SHA256=y
 CONFIG_CRYPTO_HW=y
 # CONFIG_CRYPTO_DEV_ATMEL_ECC is not set
 # CONFIG_CRYPTO_DEV_ATMEL_SHA204A is not set
@@ -6863,6 +6847,27 @@ CONFIG_GENERIC_PCI_IOMAP=y
 CONFIG_ARCH_USE_CMPXCHG_LOCKREF=y
 CONFIG_ARCH_HAS_FAST_MULTIPLIER=y
 # CONFIG_INDIRECT_PIO is not set
+
+#
+# Crypto library routines
+#
+CONFIG_CRYPTO_LIB_AES=y
+CONFIG_CRYPTO_LIB_ARC4=y
+CONFIG_CRYPTO_LIB_BLAKE2S_GENERIC=y
+CONFIG_CRYPTO_ARCH_HAVE_LIB_CHACHA=y
+CONFIG_CRYPTO_LIB_CHACHA_GENERIC=y
+CONFIG_CRYPTO_LIB_CHACHA=y
+CONFIG_CRYPTO_LIB_CURVE25519_GENERIC=y
+CONFIG_CRYPTO_LIB_CURVE25519=y
+CONFIG_CRYPTO_LIB_DES=y
+CONFIG_CRYPTO_LIB_POLY1305_RSIZE=9
+CONFIG_CRYPTO_ARCH_HAVE_LIB_POLY1305=y
+CONFIG_CRYPTO_LIB_POLY1305=y
+CONFIG_CRYPTO_LIB_CHACHA20POLY1305=y
+CONFIG_CRYPTO_LIB_SHA256=y
+# end of Crypto library routines
+
+CONFIG_LIB_MEMNEQ=y
 # CONFIG_CRC_CCITT is not set
 CONFIG_CRC16=y
 CONFIG_CRC_T10DIF=y
