--- a/packages/mediacenter/kodi/config/kodi.conf.in
+++ b/packages/mediacenter/kodi/config/kodi.conf.in
@@ -1,4 +1,4 @@
-KODI_AE_SINK=@KODI_AE_SINK@
+KODI_AUDIO_ARGS=@KODI_AUDIO_ARGS@
 HOME=/storage
 KODI_TEMP=/storage/.kodi/temp
 KODI_HOME=/usr/share/kodi/
