--- a/packages/mediacenter/kodi/system.d/kodi.service
+++ b/packages/mediacenter/kodi/system.d/kodi.service
@@ -9,7 +9,7 @@ EnvironmentFile=/usr/lib/kodi/kodi.conf
 EnvironmentFile=-/run/libreelec/kodi.conf
 EnvironmentFile=-/run/libreelec/debug/kodi.conf
 ExecStartPre=-/usr/lib/kodi/kodi-config
-ExecStart=/usr/lib/kodi/kodi.sh --standalone -fs $KODI_ARGS $KODI_DEBUG
+ExecStart=/usr/lib/kodi/kodi.sh --standalone -fs $KODI_AUDIO_ARGS $KODI_ARGS $KODI_DEBUG
 ExecStop=/bin/kill -TERM $MAINPID
 ExecStopPost=-/usr/lib/kodi/kodi-safe-mode
 TimeoutStopSec=30
