--- a/projects/Amlogic-ce/devices/Amlogic-ne/linux/linux.aarch64.conf
+++ b/projects/Amlogic-ce/devices/Amlogic-ne/linux/linux.aarch64.conf
@@ -5629,11 +5629,11 @@ CONFIG_ARM_DSU_PMU=y
 #
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
-# CONFIG_ANDROID_BINDERFS is not set
+CONFIG_ANDROID_BINDERFS=y
 CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
 # CONFIG_ANDROID_BINDER_IPC_SELFTEST is not set
 CONFIG_ANDROID_VENDOR_HOOKS=y
-# CONFIG_ANDROID_KABI_RESERVE is not set
+CONFIG_ANDROID_KABI_RESERVE=y
 CONFIG_ANDROID_VENDOR_OEM_DATA=y
 # end of Android
 
