linux (Allwinner aarch64): update .config for 6.5

--- a/projects/Allwinner/linux/linux.aarch64.conf
+++ b/projects/Allwinner/linux/linux.aarch64.conf
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 6.4.8 Kernel Configuration
+# Linux/arm64 6.5.0-rc5 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="aarch64-libreelec-linux-gnu-gcc-13.2.0 (GCC) 13.2.0"
 CONFIG_CC_IS_GCC=y
@@ -248,6 +248,7 @@ CONFIG_KALLSYMS_BASE_RELATIVE=y
 CONFIG_ARCH_HAS_MEMBARRIER_SYNC_CORE=y
 CONFIG_KCMP=y
 CONFIG_RSEQ=y
+CONFIG_CACHESTAT_SYSCALL=y
 # CONFIG_DEBUG_RSEQ is not set
 # CONFIG_EMBEDDED is not set
 CONFIG_HAVE_PERF_EVENTS=y
@@ -313,6 +314,7 @@ CONFIG_ARCH_SUNXI=y
 # CONFIG_ARCH_MESON is not set
 # CONFIG_ARCH_MVEBU is not set
 # CONFIG_ARCH_NXP is not set
+# CONFIG_ARCH_MA35 is not set
 # CONFIG_ARCH_NPCM is not set
 # CONFIG_ARCH_QCOM is not set
 # CONFIG_ARCH_REALTEK is not set
@@ -320,6 +322,7 @@ CONFIG_ARCH_SUNXI=y
 # CONFIG_ARCH_ROCKCHIP is not set
 # CONFIG_ARCH_SEATTLE is not set
 # CONFIG_ARCH_INTEL_SOCFPGA is not set
+# CONFIG_ARCH_STM32 is not set
 # CONFIG_ARCH_SYNQUACER is not set
 # CONFIG_ARCH_TEGRA is not set
 # CONFIG_ARCH_SPRD is not set
@@ -431,16 +434,16 @@ CONFIG_KUSER_HELPERS=y
 #
 # CONFIG_ARM64_HW_AFDBM is not set
 # CONFIG_ARM64_PAN is not set
-CONFIG_AS_HAS_LDAPR=y
-CONFIG_AS_HAS_LSE_ATOMICS=y
+# CONFIG_AS_HAS_LDAPR is not set
+# CONFIG_AS_HAS_LSE_ATOMICS is not set
 # CONFIG_ARM64_USE_LSE_ATOMICS is not set
 # end of ARMv8.1 architectural features
 
 #
 # ARMv8.2 architectural features
 #
-CONFIG_AS_HAS_ARMV8_2=y
-CONFIG_AS_HAS_SHA3=y
+# CONFIG_AS_HAS_ARMV8_2 is not set
+# CONFIG_AS_HAS_SHA3 is not set
 # CONFIG_ARM64_PMEM is not set
 # CONFIG_ARM64_RAS_EXTN is not set
 # CONFIG_ARM64_CNP is not set
@@ -450,28 +453,28 @@ CONFIG_AS_HAS_SHA3=y
 # ARMv8.3 architectural features
 #
 # CONFIG_ARM64_PTR_AUTH is not set
-CONFIG_CC_HAS_BRANCH_PROT_PAC_RET=y
-CONFIG_CC_HAS_SIGN_RETURN_ADDRESS=y
+# CONFIG_CC_HAS_BRANCH_PROT_PAC_RET is not set
+# CONFIG_CC_HAS_SIGN_RETURN_ADDRESS is not set
 # CONFIG_AS_HAS_ARMV8_3 is not set
-CONFIG_AS_HAS_CFI_NEGATE_RA_STATE=y
+# CONFIG_AS_HAS_CFI_NEGATE_RA_STATE is not set
 # end of ARMv8.3 architectural features
 
 #
 # ARMv8.4 architectural features
 #
 # CONFIG_ARM64_AMU_EXTN is not set
-CONFIG_AS_HAS_ARMV8_4=y
+# CONFIG_AS_HAS_ARMV8_4 is not set
 # CONFIG_ARM64_TLB_RANGE is not set
 # end of ARMv8.4 architectural features
 
 #
 # ARMv8.5 architectural features
 #
-CONFIG_AS_HAS_ARMV8_5=y
+# CONFIG_AS_HAS_ARMV8_5 is not set
 # CONFIG_ARM64_BTI is not set
-CONFIG_CC_HAS_BRANCH_PROT_PAC_RET_BTI=y
+# CONFIG_CC_HAS_BRANCH_PROT_PAC_RET_BTI is not set
 # CONFIG_ARM64_E0PD is not set
-CONFIG_ARM64_AS_HAS_MTE=y
+# CONFIG_ARM64_AS_HAS_MTE is not set
 # end of ARMv8.5 architectural features
 
 #
@@ -481,7 +484,6 @@ CONFIG_ARM64_AS_HAS_MTE=y
 
 CONFIG_ARM64_SVE=y
 CONFIG_ARM64_SME=y
-CONFIG_ARM64_MODULE_PLTS=y
 # CONFIG_ARM64_PSEUDO_NMI is not set
 CONFIG_RELOCATABLE=y
 # CONFIG_RANDOMIZE_BASE is not set
@@ -586,6 +588,8 @@ CONFIG_HAVE_KVM=y
 #
 CONFIG_CRASH_CORE=y
 CONFIG_KEXEC_CORE=y
+CONFIG_HOTPLUG_CORE_SYNC=y
+CONFIG_HOTPLUG_CORE_SYNC_DEAD=y
 # CONFIG_KPROBES is not set
 CONFIG_JUMP_LABEL=y
 # CONFIG_STATIC_KEYS_SELFTEST is not set
@@ -796,7 +800,7 @@ CONFIG_SWAP=y
 #
 # SLAB allocator options
 #
-# CONFIG_SLAB is not set
+# CONFIG_SLAB_DEPRECATED is not set
 CONFIG_SLUB=y
 # CONFIG_SLUB_TINY is not set
 CONFIG_SLAB_MERGE_DEFAULT=y
@@ -2198,6 +2202,7 @@ CONFIG_RTW88_8822BS=m
 CONFIG_RTW88_8822BU=m
 CONFIG_RTW88_8822CS=m
 CONFIG_RTW88_8822CU=m
+CONFIG_RTW88_8723DS=m
 CONFIG_RTW88_8723DU=m
 CONFIG_RTW88_8821CS=m
 CONFIG_RTW88_8821CU=m
@@ -2362,7 +2367,6 @@ CONFIG_TOUCHSCREEN_ATMEL_MXT=m
 # CONFIG_TOUCHSCREEN_IMAGIS is not set
 # CONFIG_TOUCHSCREEN_IMX6UL_TSC is not set
 # CONFIG_TOUCHSCREEN_INEXIO is not set
-# CONFIG_TOUCHSCREEN_MK712 is not set
 # CONFIG_TOUCHSCREEN_PENMOUNT is not set
 # CONFIG_TOUCHSCREEN_EDT_FT5X06 is not set
 # CONFIG_TOUCHSCREEN_TOUCHRIGHT is not set
@@ -2413,7 +2417,6 @@ CONFIG_INPUT_UINPUT=y
 # CONFIG_INPUT_PCF8574 is not set
 # CONFIG_INPUT_PWM_BEEPER is not set
 # CONFIG_INPUT_PWM_VIBRA is not set
-# CONFIG_INPUT_RK805_PWRKEY is not set
 # CONFIG_INPUT_GPIO_ROTARY_ENCODER is not set
 # CONFIG_INPUT_DA7280_HAPTICS is not set
 # CONFIG_INPUT_ADXL34X is not set
@@ -2545,6 +2548,7 @@ CONFIG_HW_RANDOM=y
 # CONFIG_HW_RANDOM_XIPHERA is not set
 CONFIG_HW_RANDOM_ARM_SMCCC_TRNG=m
 CONFIG_DEVMEM=y
+CONFIG_DEVPORT=y
 CONFIG_TCG_TPM=y
 CONFIG_HW_RANDOM_TPM=y
 # CONFIG_TCG_TIS is not set
@@ -2724,7 +2728,6 @@ CONFIG_PINCTRL_MAX77620=y
 # CONFIG_PINCTRL_MCP23S08 is not set
 # CONFIG_PINCTRL_MICROCHIP_SGPIO is not set
 # CONFIG_PINCTRL_OCELOT is not set
-# CONFIG_PINCTRL_RK805 is not set
 CONFIG_PINCTRL_SINGLE=y
 # CONFIG_PINCTRL_STMFX is not set
 # CONFIG_PINCTRL_SX150X is not set
@@ -2890,7 +2893,6 @@ CONFIG_AXP20X_POWER=y
 # CONFIG_CHARGER_BQ25890 is not set
 # CONFIG_CHARGER_BQ25980 is not set
 # CONFIG_CHARGER_BQ256XX is not set
-# CONFIG_CHARGER_RK817 is not set
 # CONFIG_CHARGER_SMB347 is not set
 # CONFIG_BATTERY_GAUGE_LTC2941 is not set
 # CONFIG_BATTERY_GOLDFISH is not set
@@ -2969,6 +2971,7 @@ CONFIG_SENSORS_ARM_SCPI=y
 # CONFIG_SENSORS_MAX31722 is not set
 # CONFIG_SENSORS_MAX31730 is not set
 # CONFIG_SENSORS_MAX31760 is not set
+# CONFIG_MAX31827 is not set
 # CONFIG_SENSORS_MAX6620 is not set
 # CONFIG_SENSORS_MAX6621 is not set
 # CONFIG_SENSORS_MAX6639 is not set
@@ -3101,6 +3104,7 @@ CONFIG_WATCHDOG_OPEN_TIMEOUT=0
 # CONFIG_SOFT_WATCHDOG is not set
 # CONFIG_GPIO_WATCHDOG is not set
 # CONFIG_XILINX_WATCHDOG is not set
+# CONFIG_XILINX_WINDOW_WATCHDOG is not set
 # CONFIG_ZIIRAVE_WATCHDOG is not set
 CONFIG_ARM_SP805_WATCHDOG=y
 # CONFIG_ARM_SBSA_WATCHDOG is not set
@@ -3142,7 +3146,7 @@ CONFIG_MFD_AXP20X=y
 CONFIG_MFD_AXP20X_I2C=y
 CONFIG_MFD_AXP20X_RSB=y
 # CONFIG_MFD_MADERA is not set
-# CONFIG_MFD_MAX597X is not set
+# CONFIG_MFD_MAX5970 is not set
 # CONFIG_PMIC_DA903X is not set
 # CONFIG_MFD_DA9052_SPI is not set
 # CONFIG_MFD_DA9052_I2C is not set
@@ -3162,6 +3166,7 @@ CONFIG_MFD_HI6421_PMIC=y
 # CONFIG_MFD_88PM805 is not set
 # CONFIG_MFD_88PM860X is not set
 # CONFIG_MFD_MAX14577 is not set
+# CONFIG_MFD_MAX77541 is not set
 CONFIG_MFD_MAX77620=y
 # CONFIG_MFD_MAX77650 is not set
 # CONFIG_MFD_MAX77686 is not set
@@ -3188,7 +3193,8 @@ CONFIG_MFD_MAX77620=y
 # CONFIG_MFD_RT5033 is not set
 # CONFIG_MFD_RT5120 is not set
 # CONFIG_MFD_RC5T583 is not set
-CONFIG_MFD_RK808=y
+# CONFIG_MFD_RK8XX_I2C is not set
+# CONFIG_MFD_RK8XX_SPI is not set
 # CONFIG_MFD_RN5T618 is not set
 CONFIG_MFD_SEC_CORE=y
 # CONFIG_MFD_SI476X_CORE is not set
@@ -3216,6 +3222,8 @@ CONFIG_MFD_SYSCON=y
 # CONFIG_MFD_TPS65910 is not set
 # CONFIG_MFD_TPS65912_I2C is not set
 # CONFIG_MFD_TPS65912_SPI is not set
+# CONFIG_MFD_TPS6594_I2C is not set
+# CONFIG_MFD_TPS6594_SPI is not set
 # CONFIG_TWL4030_CORE is not set
 # CONFIG_TWL6040_CORE is not set
 CONFIG_MFD_WL1273_CORE=m
@@ -3292,8 +3300,8 @@ CONFIG_REGULATOR_MAX77620=y
 # CONFIG_REGULATOR_PV88080 is not set
 # CONFIG_REGULATOR_PV88090 is not set
 CONFIG_REGULATOR_PWM=y
+# CONFIG_REGULATOR_RAA215300 is not set
 # CONFIG_REGULATOR_RASPBERRYPI_TOUCHSCREEN_ATTINY is not set
-CONFIG_REGULATOR_RK808=y
 # CONFIG_REGULATOR_RT4801 is not set
 # CONFIG_REGULATOR_RT4803 is not set
 # CONFIG_REGULATOR_RT5190A is not set
@@ -3315,6 +3323,7 @@ CONFIG_REGULATOR_S2MPS11=y
 # CONFIG_REGULATOR_TPS51632 is not set
 # CONFIG_REGULATOR_TPS62360 is not set
 # CONFIG_REGULATOR_TPS6286X is not set
+# CONFIG_REGULATOR_TPS6287X is not set
 # CONFIG_REGULATOR_TPS65023 is not set
 # CONFIG_REGULATOR_TPS6507X is not set
 # CONFIG_REGULATOR_TPS65132 is not set
@@ -3461,7 +3470,6 @@ CONFIG_VIDEO_PVRUSB2=m
 CONFIG_VIDEO_PVRUSB2_SYSFS=y
 CONFIG_VIDEO_PVRUSB2_DVB=y
 # CONFIG_VIDEO_PVRUSB2_DEBUGIFC is not set
-CONFIG_VIDEO_STK1160_COMMON=m
 CONFIG_VIDEO_STK1160=m
 
 #
@@ -3720,6 +3728,7 @@ CONFIG_VIDEO_MT9V011=m
 # CONFIG_VIDEO_MT9V032 is not set
 # CONFIG_VIDEO_MT9V111 is not set
 # CONFIG_VIDEO_OG01A1B is not set
+# CONFIG_VIDEO_OV01A10 is not set
 # CONFIG_VIDEO_OV02A10 is not set
 # CONFIG_VIDEO_OV08D10 is not set
 # CONFIG_VIDEO_OV08X40 is not set
@@ -4175,6 +4184,7 @@ CONFIG_DRM_PANEL=y
 # CONFIG_DRM_PANEL_SAMSUNG_ATNA33XC20 is not set
 # CONFIG_DRM_PANEL_SAMSUNG_DB7430 is not set
 # CONFIG_DRM_PANEL_SAMSUNG_S6D27A1 is not set
+# CONFIG_DRM_PANEL_SAMSUNG_S6D7AA0 is not set
 # CONFIG_DRM_PANEL_SAMSUNG_S6E63M0 is not set
 # CONFIG_DRM_PANEL_SAMSUNG_S6E88A0_AMS452EF01 is not set
 # CONFIG_DRM_PANEL_SAMSUNG_S6E8AA0 is not set
@@ -4270,15 +4280,14 @@ CONFIG_DRM_PANEL_ORIENTATION_QUIRKS=y
 CONFIG_FB_NOTIFY=y
 CONFIG_FB=y
 # CONFIG_FIRMWARE_EDID is not set
-CONFIG_FB_CFB_FILLRECT=y
-CONFIG_FB_CFB_COPYAREA=y
-CONFIG_FB_CFB_IMAGEBLIT=y
 CONFIG_FB_SYS_FILLRECT=y
 CONFIG_FB_SYS_COPYAREA=y
 CONFIG_FB_SYS_IMAGEBLIT=y
 # CONFIG_FB_FOREIGN_ENDIAN is not set
 CONFIG_FB_SYS_FOPS=y
 CONFIG_FB_DEFERRED_IO=y
+CONFIG_FB_SYS_HELPERS=y
+CONFIG_FB_SYS_HELPERS_DEFERRED=y
 CONFIG_FB_MODE_HELPERS=y
 # CONFIG_FB_TILEBLITTING is not set
 
@@ -4376,6 +4385,7 @@ CONFIG_SND_CTL_FAST_LOOKUP=y
 CONFIG_SND_DRIVERS=y
 # CONFIG_SND_DUMMY is not set
 # CONFIG_SND_ALOOP is not set
+# CONFIG_SND_PCMTEST is not set
 # CONFIG_SND_MTPAV is not set
 # CONFIG_SND_SERIAL_U16550 is not set
 # CONFIG_SND_SERIAL_GENERIC is not set
@@ -4390,6 +4400,7 @@ CONFIG_SND_HDA_PREALLOC_SIZE=64
 CONFIG_SND_SPI=y
 CONFIG_SND_USB=y
 CONFIG_SND_USB_AUDIO=m
+# CONFIG_SND_USB_AUDIO_MIDI_V2 is not set
 CONFIG_SND_USB_AUDIO_USE_MEDIA_CONTROLLER=y
 # CONFIG_SND_USB_UA101 is not set
 # CONFIG_SND_USB_CAIAQ is not set
@@ -4428,6 +4439,7 @@ CONFIG_SND_SOC_GENERIC_DMAENGINE_PCM=y
 # CONFIG_SND_SOC_IMX_AUDMUX is not set
 # end of SoC Audio for Freescale CPUs
 
+# CONFIG_SND_SOC_CHV3_I2S is not set
 # CONFIG_SND_I2S_HI6210_I2S is not set
 # CONFIG_SND_SOC_IMG is not set
 # CONFIG_SND_SOC_MTK_BTCVSD is not set
@@ -4483,6 +4495,7 @@ CONFIG_SND_SOC_AK4613=m
 # CONFIG_SND_SOC_AW88395 is not set
 # CONFIG_SND_SOC_BD28623 is not set
 # CONFIG_SND_SOC_BT_SCO is not set
+# CONFIG_SND_SOC_CHV3_CODEC is not set
 # CONFIG_SND_SOC_CS35L32 is not set
 # CONFIG_SND_SOC_CS35L33 is not set
 # CONFIG_SND_SOC_CS35L34 is not set
@@ -4533,6 +4546,7 @@ CONFIG_SND_SOC_HDMI_CODEC=y
 # CONFIG_SND_SOC_MAX98927 is not set
 # CONFIG_SND_SOC_MAX98520 is not set
 # CONFIG_SND_SOC_MAX98373_I2C is not set
+# CONFIG_SND_SOC_MAX98388 is not set
 # CONFIG_SND_SOC_MAX98390 is not set
 # CONFIG_SND_SOC_MAX98396 is not set
 # CONFIG_SND_SOC_MAX9860 is not set
@@ -4552,7 +4566,6 @@ CONFIG_SND_SOC_HDMI_CODEC=y
 # CONFIG_SND_SOC_PCM512x_SPI is not set
 # CONFIG_SND_SOC_PEB2466 is not set
 # CONFIG_SND_SOC_RK3328 is not set
-# CONFIG_SND_SOC_RK817 is not set
 # CONFIG_SND_SOC_RT5616 is not set
 # CONFIG_SND_SOC_RT5631 is not set
 # CONFIG_SND_SOC_RT5640 is not set
@@ -4568,6 +4581,7 @@ CONFIG_SND_SOC_SPDIF=y
 # CONFIG_SND_SOC_SSM2518 is not set
 # CONFIG_SND_SOC_SSM2602_SPI is not set
 # CONFIG_SND_SOC_SSM2602_I2C is not set
+# CONFIG_SND_SOC_SSM3515 is not set
 # CONFIG_SND_SOC_SSM4567 is not set
 # CONFIG_SND_SOC_STA32X is not set
 # CONFIG_SND_SOC_STA350 is not set
@@ -4577,6 +4591,7 @@ CONFIG_SND_SOC_SPDIF=y
 # CONFIG_SND_SOC_TAS2764 is not set
 # CONFIG_SND_SOC_TAS2770 is not set
 # CONFIG_SND_SOC_TAS2780 is not set
+# CONFIG_SND_SOC_TAS2781_I2C is not set
 # CONFIG_SND_SOC_TAS5086 is not set
 # CONFIG_SND_SOC_TAS571X is not set
 # CONFIG_SND_SOC_TAS5720 is not set
@@ -4728,6 +4743,7 @@ CONFIG_HID_NINTENDO=m
 CONFIG_NINTENDO_FF=y
 # CONFIG_HID_NTI is not set
 # CONFIG_HID_NTRIG is not set
+# CONFIG_HID_NVIDIA_SHIELD is not set
 CONFIG_HID_ORTEK=m
 CONFIG_HID_OUYA=m
 CONFIG_HID_PANTHERLORD=m
@@ -5083,6 +5099,7 @@ CONFIG_LEDS_CLASS=y
 # LED drivers
 #
 # CONFIG_LEDS_AN30259A is not set
+# CONFIG_LEDS_AW200XX is not set
 # CONFIG_LEDS_AW2013 is not set
 # CONFIG_LEDS_BCM6328 is not set
 # CONFIG_LEDS_BCM6358 is not set
@@ -5121,7 +5138,7 @@ CONFIG_LEDS_SYSCON=y
 # CONFIG_LEDS_MLXREG is not set
 # CONFIG_LEDS_USER is not set
 # CONFIG_LEDS_SPI_BYTE is not set
-# CONFIG_LEDS_TI_LMU_COMMON is not set
+# CONFIG_LEDS_LM3697 is not set
 
 #
 # Flash and Torch LED drivers
@@ -5194,7 +5211,6 @@ CONFIG_RTC_INTF_DEV=y
 # CONFIG_RTC_DRV_MAX6900 is not set
 CONFIG_RTC_DRV_MAX77686=y
 # CONFIG_RTC_DRV_NCT3018Y is not set
-CONFIG_RTC_DRV_RK808=m
 # CONFIG_RTC_DRV_RS5C372 is not set
 # CONFIG_RTC_DRV_ISL1208 is not set
 # CONFIG_RTC_DRV_ISL12022 is not set
@@ -5430,7 +5446,6 @@ CONFIG_COMMON_CLK=y
 # CONFIG_LMK04832 is not set
 # CONFIG_COMMON_CLK_MAX77686 is not set
 # CONFIG_COMMON_CLK_MAX9485 is not set
-# CONFIG_COMMON_CLK_RK808 is not set
 CONFIG_COMMON_CLK_SCPI=y
 # CONFIG_COMMON_CLK_SI5341 is not set
 # CONFIG_COMMON_CLK_SI5351 is not set
@@ -5985,6 +6000,7 @@ CONFIG_IIO_CONSUMERS_PER_TRIGGER=2
 # CONFIG_SENSORS_ISL29028 is not set
 # CONFIG_ISL29125 is not set
 # CONFIG_JSA1212 is not set
+# CONFIG_ROHM_BU27008 is not set
 # CONFIG_ROHM_BU27034 is not set
 # CONFIG_RPR0521 is not set
 # CONFIG_LTR501 is not set
@@ -5994,6 +6010,7 @@ CONFIG_IIO_CONSUMERS_PER_TRIGGER=2
 # CONFIG_MAX44009 is not set
 # CONFIG_NOA1305 is not set
 # CONFIG_OPT3001 is not set
+# CONFIG_OPT4001 is not set
 # CONFIG_PA12203001 is not set
 # CONFIG_SI1133 is not set
 # CONFIG_SI1145 is not set
@@ -6071,6 +6088,7 @@ CONFIG_IIO_CONSUMERS_PER_TRIGGER=2
 # CONFIG_MCP4531 is not set
 # CONFIG_MCP41010 is not set
 # CONFIG_TPL0102 is not set
+# CONFIG_X9250 is not set
 # end of Digital potentiometers
 
 #
@@ -6091,6 +6109,7 @@ CONFIG_IIO_CONSUMERS_PER_TRIGGER=2
 # CONFIG_MPL115_I2C is not set
 # CONFIG_MPL115_SPI is not set
 # CONFIG_MPL3115 is not set
+# CONFIG_MPRLS0025PA is not set
 # CONFIG_MS5611 is not set
 # CONFIG_MS5637 is not set
 # CONFIG_IIO_ST_PRESS is not set
@@ -6226,6 +6245,7 @@ CONFIG_ARM_PMU=y
 CONFIG_ARM_PMUV3=y
 # CONFIG_ARM_DSU_PMU is not set
 # CONFIG_ARM_SPE_PMU is not set
+# CONFIG_ARM_CORESIGHT_PMU_ARCH_SYSTEM_PMU is not set
 # end of Performance monitor support
 
 CONFIG_RAS=y
@@ -6585,7 +6605,6 @@ CONFIG_SECURITY=y
 CONFIG_SECURITYFS=y
 # CONFIG_SECURITY_NETWORK is not set
 # CONFIG_SECURITY_PATH is not set
-CONFIG_HAVE_HARDENED_USERCOPY_ALLOCATOR=y
 # CONFIG_HARDENED_USERCOPY is not set
 # CONFIG_FORTIFY_SOURCE is not set
 # CONFIG_STATIC_USERMODEHELPER is not set
@@ -6639,6 +6658,7 @@ CONFIG_CRYPTO_ALGAPI=y
 CONFIG_CRYPTO_ALGAPI2=y
 CONFIG_CRYPTO_AEAD=y
 CONFIG_CRYPTO_AEAD2=y
+CONFIG_CRYPTO_SIG2=y
 CONFIG_CRYPTO_SKCIPHER=y
 CONFIG_CRYPTO_SKCIPHER2=y
 CONFIG_CRYPTO_HASH=y
@@ -6727,6 +6747,7 @@ CONFIG_CRYPTO_NHPOLY1305=y
 # CONFIG_CRYPTO_CHACHA20POLY1305 is not set
 CONFIG_CRYPTO_CCM=y
 CONFIG_CRYPTO_GCM=y
+CONFIG_CRYPTO_GENIV=y
 CONFIG_CRYPTO_SEQIV=y
 CONFIG_CRYPTO_ECHAINIV=y
 # CONFIG_CRYPTO_ESSIV is not set
@@ -6748,7 +6769,7 @@ CONFIG_CRYPTO_POLYVAL=y
 CONFIG_CRYPTO_SHA1=y
 CONFIG_CRYPTO_SHA256=y
 CONFIG_CRYPTO_SHA512=y
-CONFIG_CRYPTO_SHA3=m
+CONFIG_CRYPTO_SHA3=y
 CONFIG_CRYPTO_SM3=y
 CONFIG_CRYPTO_SM3_GENERIC=m
 # CONFIG_CRYPTO_STREEBOG is not set
@@ -6788,6 +6809,7 @@ CONFIG_CRYPTO_DRBG_HMAC=y
 # CONFIG_CRYPTO_DRBG_CTR is not set
 CONFIG_CRYPTO_DRBG=y
 CONFIG_CRYPTO_JITTERENTROPY=y
+# CONFIG_CRYPTO_JITTERENTROPY_TESTINTERFACE is not set
 CONFIG_CRYPTO_KDF800108_CTR=y
 # end of Random number generation
 
@@ -6966,6 +6988,7 @@ CONFIG_HAS_IOMEM=y
 CONFIG_HAS_IOPORT=y
 CONFIG_HAS_DMA=y
 CONFIG_DMA_OPS=y
+CONFIG_NEED_SG_DMA_FLAGS=y
 CONFIG_NEED_SG_DMA_LENGTH=y
 CONFIG_NEED_DMA_MAP_STATE=y
 CONFIG_ARCH_DMA_ADDR_T_64BIT=y
@@ -6976,6 +6999,7 @@ CONFIG_ARCH_HAS_SYNC_DMA_FOR_DEVICE=y
 CONFIG_ARCH_HAS_SYNC_DMA_FOR_CPU=y
 CONFIG_ARCH_HAS_DMA_PREP_COHERENT=y
 CONFIG_SWIOTLB=y
+CONFIG_DMA_BOUNCE_UNALIGNED_KMALLOC=y
 # CONFIG_DMA_RESTRICTED_POOL is not set
 CONFIG_DMA_NONCOHERENT_MMAP=y
 CONFIG_DMA_COHERENT_POOL=y
@@ -7151,8 +7175,11 @@ CONFIG_HAVE_ARCH_KFENCE=y
 CONFIG_PANIC_ON_OOPS_VALUE=0
 CONFIG_PANIC_TIMEOUT=0
 # CONFIG_SOFTLOCKUP_DETECTOR is not set
+CONFIG_HAVE_HARDLOCKUP_DETECTOR_BUDDY=y
+# CONFIG_HARDLOCKUP_DETECTOR is not set
 # CONFIG_DETECT_HUNG_TASK is not set
 # CONFIG_WQ_WATCHDOG is not set
+# CONFIG_WQ_CPU_INTENSIVE_REPORT is not set
 # CONFIG_TEST_LOCKUP is not set
 # end of Debug Oops, Lockups and Hangs
 
@@ -7223,6 +7250,7 @@ CONFIG_RCU_EXP_CPU_STALL_TIMEOUT=0
 # CONFIG_LATENCYTOP is not set
 CONFIG_HAVE_FUNCTION_TRACER=y
 CONFIG_HAVE_FUNCTION_GRAPH_TRACER=y
+CONFIG_HAVE_FUNCTION_GRAPH_RETVAL=y
 CONFIG_HAVE_DYNAMIC_FTRACE=y
 CONFIG_HAVE_DYNAMIC_FTRACE_WITH_ARGS=y
 CONFIG_HAVE_FTRACE_MCOUNT_RECORD=y
@@ -7231,6 +7259,8 @@ CONFIG_HAVE_C_RECORDMCOUNT=y
 CONFIG_TRACING_SUPPORT=y
 # CONFIG_FTRACE is not set
 # CONFIG_SAMPLES is not set
+CONFIG_HAVE_SAMPLE_FTRACE_DIRECT=y
+CONFIG_HAVE_SAMPLE_FTRACE_DIRECT_MULTI=y
 CONFIG_STRICT_DEVMEM=y
 # CONFIG_IO_STRICT_DEVMEM is not set
 
